--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Food, LLC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+
+    <!-- Navbar Header (Brand + Mobile Button) -->
+    <div class="navbar-header">
+
+      <!-- Mobile menu button -->
+      <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#mobile-menu">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <!-- Brand -->
+      <a class="navbar-brand" href="#">Food, LLC</a>
+
+    </div>
+
+    <!-- Mobile Dropdown Menu -->
+    <div class="collapse navbar-collapse" id="mobile-menu">
+      <ul class="nav navbar-nav visible-xs">
+        <li><a href="#">Chicken</a></li>
+        <li><a href="#">Beef</a></li>
+        <li><a href="#">Sushi</a></li>
+      </ul>
+    </div>
+
+  </div>
+</nav>
+
+<!-- PAGE HEADING -->
+<div class="container">
+  <h1 class="text-center">Our Menu</h1>
+</div>
+
+<!-- TALL SECTION -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 tall-section">
+      <h2>Menu Content</h2>
+      <p>
+        This is a tall section made to force scrolling.  
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        (You may add more text or rely on height in CSS.)
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+</body>
+</html>
 
